components/teasercard.module.css
/* Import Global Styles */
@import url("/styles/global.css");

.card {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  /* Add this line to center the card */
  margin-bottom: 3.25rem;
  background: linear-gradient(180deg, #2A4075 0%, #1D3369 100%);
  /* Use background instead of fill */
  box-shadow: 0px 3px 0px 0px rgba(184, 146, 255, 0.30) inset;
  width: 60%;
  border-radius: 15px;
  padding: .7rem;
  /*transition: all 0.2s ease-in-out;*/
}

.link:hover{
  text-decoration: none;
}

.card:hover {
  background: linear-gradient(180deg, #2E4680 0%, #1D3369 100%);
  /*transition: all 0.2s ease-in-out;*/
}

.card .top_container {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
}

.card .top_container .text_content {
  display: flex;
  flex-direction: column;
  flex-grow: 1;
  padding-left: 3rem;
  padding-top: 1.5rem;
}

.card .top_container .text_content h3 {
  font-family: MuseoModerno;
  font-size: 2.5rem;
  font-style: normal;
  font-weight: 300;
  letter-spacing: -0.05rem;
  background: linear-gradient(180deg, #A7B2D9 30%, #F7F9FF 51.04%, #939DBF 77%); /*percentage is adjusted for the card */
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  margin-top: 0;
  margin-bottom: 0 ;
}

.card .top_container .text_content p {
  color: var(--subheading-light-text, #A7B1CF);
  font-family: SF Pro Rounded, sans-serif;
  font-size: 1.125rem;
  font-style: normal;
  line-height: normal;
  letter-spacing: -0.0225rem;
  font-weight: 400;
  margin-top: 0;
  margin-bottom: 2rem;
}

.card .imageContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
}

/* Gradient overlay */
.card .imageContainer::after {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: linear-gradient(180deg, rgba(34, 56, 110, 0.00) 0%, #1E346A 100%);
  z-index: 1;
}

.card .imageContainer .image {
  margin: 0 auto;
  /* center the image horizontally */
  width: 90%;
  height: auto;
  max-width: 36rem;
  max-height: auto;
  margin-bottom: 2rem;
}

.card .top_container .arrowDiv {
  margin-right: 3rem;
  padding-top: 1.5rem;
}

@media (max-width: 1030px) {
  /* .card {
    width: 90vw;
    margin-bottom: 2rem;
  }*/

  .card .imageContainer .image {
    max-width: 47vw;
    max-height: auto;
  } 
}

@media (max-width: 600px) {
  .card {
    width: 80vw;
    margin-bottom: 2rem;
  }

  .card .imageContainer .image {
    max-height: auto;
    max-width: 100vw;
  }

  .card .top_container .text_content {
    padding: 0;
    padding-left: 1.25rem;
    padding-top: .95rem;
    padding-right: 1.25rem;
  }

  .card .top_container .text_content h3 {
    font-size: 1.5rem;
    font-style: normal;
    margin-bottom: .3rem;
  }
  
  .card .top_container .text_content p {
    font-size: 1rem;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    letter-spacing: -0.0225rem;
  }

  .card .top_container .arrowDiv {
    margin: 0;
    margin-right: .25rem;
  }
}

